--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -94,7 +94,7 @@
     </div>
 </div>
 
-<h3 class="my-4">My Devices</h3>
+<h3 class="my-4 mt-5">My Devices</h3>
 <hr />
 <div class="table-responsive">
     @* add this class for stacking rows: table-responsive-stack *@
@@ -273,5 +273,6 @@
         </div>
     </div>
 </div>
+<button id="testNotiButton" class="btn btn-warning">Test Notification</button>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="~/js/device.js"></script>
