--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -8,7 +8,9 @@
 <link rel="stylesheet" href="~/css/home.css" asp-append-version="true" />
 
 
-<div id="customMessageBox" class="message-box"></div>
+@* <div id="customMessageBox" class="message-box"></div> *@
+<div class="toast-container position-fixed top-0 end-0 p-3" style="z-index: 2000">
+</div>
 
 <div class="d-flex flex-column flex-md-row justify-content-md-between align-items-md-center mb-4">
     <h3 class="mb-3 mb-md-0">Device Information</h3>
@@ -65,14 +67,14 @@
                     <div>
                         <strong>CPU Usage (%)</strong>
                         <div class="progress" style="height: 25px;">
-                            <div id="details-cpu-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
+                            <div id="details-cpu-bar" class="progress-bar bg-info" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">0%</div>
                         </div>
                         <div id="details-cpu-label" class="text-center text-muted small mt-1">N/A</div>
                     </div>
                     <div class="mt-3">
                         <strong>RAM Usage</strong>
                         <div class="progress" style="height: 25px;">
-                            <div id="details-ram-bar" class="progress-bar" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+                            <div id="details-ram-bar" class="progress-bar bg-info" role="progressbar" style="width: 0%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
                         </div>
                         <div id="details-ram-label" class="text-center text-muted small mt-1">N/A</div>
                     </div>
@@ -120,7 +122,7 @@
                 <th>Polling</th>
                 <th>Health Status</th>
                 <th>CPU</th>
-                <th>RAM</th>
+                <th class="col-disk">RAM</th>
                 <th class="col-disk">Disk C</th>
                 <th class="col-disk">Disk D</th>
                 <th class="col-disk">Disk E</th>
